test/ui/test/parsing/lambda-thin-arrow.stderr
error[E010]: found ‘->’ but expected parameter, type annotation or ‘=>’
  ┌─ ${TEST_FOLDER}/parsing/lambda-thin-arrow.lushui:1:27
  │
1 │ f: Nat -> Nat = \(x: Nat) -> * 2 x
  │                           ══ unexpected token
  │

error: aborting due to previous error

