test/ui/test/parsing/lambda-thin-arrow.lushui
f: Nat -> Nat = \(x: Nat) -> * 2 x
